k3s_cluster/base/dmz/media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: dmz
  labels:
    app: dmz-media-sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dmz-media-sonarr
  template:
    metadata:
      labels:
        app: dmz-media-sonarr
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          imagePullPolicy: IfNotPresent
          # restartPolicy: Always
          ports:
            - containerPort: 8989
              name: web
          volumeMounts:
            - name: media-storage
              mountPath: /config
              subPath: sonarr/config
            - name: media-storage
              mountPath: /tv
              subPath: media/tv
            - name: media-storage
              mountPath: /downloads
              subPath: downloads/sonarr
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-pvc
