k3s_cluster/base/dmz/media/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: dmz
  labels:
    app: dmz-media-sonarr
spec:
  type: ClusterIP
  selector:
    app: dmz-media-sonarr
  ports:
    - name: web
      protocol: TCP
      port: 6655
      targetPort: 8989
